# pokeapi-wrapper-cpp

./: CMakeLists.txt  LICENSE  README.md  main.cpp
model/: json_keys.h  pokemon.cpp  pokemon.h
tests/: CMakeLists.txt
tests/model/: CMakeLists.txt  test_pokemon.cpp
